--- a/DataCleaning.Rmd
+++ b/DataCleaning.Rmd
@@ -473,7 +473,7 @@ DATA$SaltUnits[DATA$SaltUnits == "see \"Notes on effect\""] <- "not provided"
 
 ```
 
-Output the most recent version of Corrections, add date
+Output the most recent version of Corrections
 ```{r}
 #reorder columns
 DATA<- DATA[,c(1,2,3,4,12,5,16,6,7,8,9,10,11,15,13,14)]
