--- a/SaltConversions.Rmd
+++ b/SaltConversions.Rmd
@@ -518,7 +518,7 @@ Get all TDS to a common unit at least for now?
 Write out csv
 ```{r}
 
-DATA<- DATA[,c(1, 2, 5, 7, 19, 20, 21, 22, 23, 24, 3, 4, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18)]
+DATA<- DATA[,c(1, 2, 5, 7, 19, 20, 21, 22, 23, 24, 25, 26, 3, 4, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18)]
 
 
 #Move around the columns
