--- a/SaltConversions.Rmd
+++ b/SaltConversions.Rmd
@@ -383,13 +383,13 @@ SALINITY$Max_salinity_psu <- as.numeric(SALINITY$Max_salinity_psu)
 
 #Convert all to psu (same at ppt)
 
-#g/L
+#g/L = g/kg = ppt = psu
 SALINITY$Min_salinity_psu<-ifelse(SALINITY$SaltUnits == "g/L",
-                                         SALINITY$Minimum_concentration_original_num / 1000000,
+                                         SALINITY$Minimum_concentration_original_num,
                                          SALINITY$Min_salinity_psu)
 
 SALINITY$Max_salinity_psu<-ifelse(SALINITY$SaltUnits == "g/L",
-                                         SALINITY$Maximum_concentration_original_num / 1000000,
+                                         SALINITY$Maximum_concentration_original_num,
                                          SALINITY$Max_salinity_psu)
 
 
@@ -413,13 +413,13 @@ SALINITY$Max_salinity_psu<-ifelse(SALINITY$SaltUnits %in% c("ppt", "psu"),
                                          SALINITY$Max_salinity_psu)
 
 
-#% multiply by 10 to get g/kg, then multiply by 1000 to get to mg/L
+#% divide by 10 to get from per-cent (i.e., parts per hundred) to per-thousand (parts per thousand)
 SALINITY$Min_salinity_psu<-ifelse(SALINITY$SaltUnits == "%",
-                                         SALINITY$Minimum_concentration_original_num * 10 * 1000,
+                                         SALINITY$Minimum_concentration_original_num / 10,
                                          SALINITY$Min_salinity_psu)
 
 SALINITY$Max_salinity_psu<-ifelse(SALINITY$SaltUnits == "%", 
-                                         SALINITY$Maximum_concentration_original_num * 10 * 1000,
+                                         SALINITY$Maximum_concentration_original_num / 10,
                                          SALINITY$Max_salinity_psu)
 
 #mOsm/kg
@@ -444,6 +444,7 @@ Get all TDS to a common unit at least for now?
 Write out csv
 ```{r}
 
+
 DATA<- DATA[,c(1, 2, 5, 7, 19, 20, 21, 22, 23, 24, 3, 4, 6, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18)]
 
 
@@ -459,6 +460,12 @@ write_csv(DATA, "data/ConvertedSalts_Clean.csv")
 What's left?  --> Salinity and Total Dissolved Solids
 Work on below.
 
+Useful info on Conductivty, Salinity, and TDS -> https://www.fondriest.com/environmental-measurements/parameters/water-quality/conductivity-salinity-tds/
+
+Rating Table and Empirical Model USGS uses to convert between specific conductance and salinity -> https://www.researchgate.net/publication/281866180_Guidelines_and_Standard_Procedures_for_Continuous_Water-Quality_Monitors_Station_Operation_Record_Computation_and_Data_Reporting
+
+Source of empirical model USGS uses to convert between specific conductance and salinity -> https://www.researchgate.net/publication/280561503_Specific_Conductance_Theoretical_Considerations_and_Application_to_Analytical_Quality_Control
+
 Step 3: Converting TDS to conductivity.
 
 Notes (SP 20210411)
@@ -471,8 +478,98 @@ To cite this article: Anna F Rusydi 2018 IOP Conf. Ser.: Earth Environ. Sci. 118
 
 #What and how many different units are we dealing with
 
-MmTDS<-subset(DATA, Measurement == "Total Dissolved Solids" | Measurement == "total suspended solids" | Measurement == "total ions")
+
+#NOTE: Seawater salinity = 35 psu, Brine water = 50 psu or more
+
+#check the ranges and outliears for salinity values prior to conversions to specific conductance (anything above 50 psu is suspicious)
+summary(SALINITY$Min_salinity_psu)
+summary(SALINITY$Max_salinity_psu)
+
+plot(SALINITY$Min_salinity_psu)
+plot(SALINITY$Max_salinity_psu)
+
+#Plug in the rating curve values from the USGS salinty (psu) <-> specific conductance (uS cm) conversion table
+Salinity.to.SpC.rating.curve<-data.frame(salinity.psu=c(0.046, 0.142, 0.240, 0.340, 0.492, 1.016, 2.001, 2.679, 3.836, 5.022, 
+                                                        6.233, 7.464, 8.714, 9.981, 11.911, 13.873, 15.865, 17.885, 19.931, 22.003, 
+                                                        24.099, 26.220, 28.364, 30.532, 32.722, 34.935, 37.172, 39.430, 41.712, 44.016),
+                                         SpC.uScm=c(100, 300, 500, 700, 1000, 2000, 3800, 5000, 7000, 9000, 
+                                                    11000, 13000, 15000, 17000, 20000, 23000, 26000, 29000, 32000, 35000, 
+                                                    38000, 41000, 44000, 47000, 50000, 53000, 56000, 59000, 62000, 65000))
+
+
+plot(Salinity.to.SpC.rating.curve$salinity.psu,Salinity.to.SpC.rating.curve$SpC.uScm)+
+  abline(lm(SpC.uScm~salinity.psu-1, data = Salinity.to.SpC.rating.curve), col = "blue")
+
+
+#Fit a linear model to the rating curve
+lm.Salinty.to.SpC = lm(SpC.uScm~salinity.psu-1, data = Salinity.to.SpC.rating.curve) #Create the linear regression
+summary(lm.Salinty.to.SpC)
+
+
+#Convert salinity to specific conductance using the linear model coefficients
+SALINITY$Min_Conductivity_uScm = (SALINITY$Min_salinity_psu*lm.Salinty.to.SpC$coefficients[1])
+SALINITY$Max_Conductivity_uScm = (SALINITY$Max_salinity_psu*lm.Salinty.to.SpC$coefficients[1])
+
+SALINITY <- SALINITY %>% select(DataID, Min_Conductivity_uScm, Max_Conductivity_uScm)
+
+
+DATA <- left_join(DATA, SALINITY, by = "DataID")
+```
+
+```{r}
+
+#NOT TEMPERATURE CORRECTED*********
+#Might need to do a multicompartment conversion based on different TDS/EC ratios (more TDS makes this ratio increase, different for freshwater vs. seawater)
+
+TDS<-subset(DATA, Measurement == "Total Dissolved Solids" | Measurement == "total suspended solids" | Measurement == "total ions")
 unique(sort(TDS$SaltUnits))
+
+TDS$Min_TDS_mgL <- NA
+TDS$Max_TDS_mgL <- NA
+
+TDS$Min_TDS_mgL <- as.numeric(TDS$Min_TDS_mgL)
+TDS$Max_TDS_mgL <- as.numeric(TDS$Max_TDS_mgL)
+
+#Convert all to mgL
+
+#mg/L
+TDS$Min_TDS_mgL<-ifelse(TDS$SaltUnits == "mg/L",
+                                         TDS$Minimum_concentration_original_num,
+                                         TDS$Min_TDS_mgL)
+
+TDS$Max_TDS_mgL<-ifelse(TDS$SaltUnits == "mg/L",
+                                         TDS$Maximum_concentration_original_num,
+                                         TDS$Max_TDS_mgL)
+
+#g/L -> mg/L
+TDS$Min_TDS_mgL<-ifelse(TDS$SaltUnits == "g/L",
+                                         TDS$Minimum_concentration_original_num*1000,
+                                         TDS$Min_TDS_mgL)
+
+TDS$Max_TDS_mgL<-ifelse(TDS$SaltUnits == "g/L",
+                                         TDS$Maximum_concentration_original_num*1000,
+                                         TDS$Max_TDS_mgL)
+
+summary(TDS$Min_TDS_mgL)
+plot(TDS$Min_TDS_mgL)
+
+summary(TDS$Max_TDS_mgL)
+plot(TDS$Max_TDS_mgL)
+
+TDS$Min_Conductivity_uScm <- 0.65*TDS$Min_TDS_mgL
+TDS$Max_Conductivity_uScm <- 0.65*TDS$Max_TDS_mgL
+
+
+summary(TDS$Min_Conductivity_uScm)
+plot(TDS$Min_Conductivity_uScm)
+
+summary(TDS$Max_Conductivity_uScm)
+plot(TDS$Max_Conductivity_uScm)
+
+TDS <- TDS %>% select(DataID, Min_Conductivity_uScm, Max_Conductivity_uScm)
+
+
+DATA <- left_join(DATA, TDS, by = "DataID")
 
 ```
 
